--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,12 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_staggered_grid_view: ^0.7.0
   record: ^6.1.0
+  firebase_core: ^2.30.0
+  cloud_firestore: ^4.17.0
   speech_to_text: ^7.3.0
   flutter_dotenv: ^5.1.0
+  image_picker: ^1.2.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
