--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,14 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_staggered_grid_view: ^0.7.0
   record: ^6.1.0
-  firebase_core: ^2.30.0
-  cloud_firestore: ^4.17.0
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
   speech_to_text: ^7.3.0
   flutter_dotenv: ^5.1.0
   image_picker: ^1.2.0
   uuid: ^4.5.1
+  firebase_auth: ^5.3.1
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +71,7 @@ flutter:
     - assets/tree.png
     - assets/beige_texture.jpg
     - assets/beige_texture2.jpg
+    - assets/google_logo.png
     - .env
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
