--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   uuid: ^4.5.1
   firebase_auth: ^5.3.1
   google_sign_in: ^6.2.1
+  audioplayers: ^6.5.0
 
 dev_dependencies:
   flutter_test:
