--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
 
+  # For Language Switching 
+  flutter_localizations:
+    sdk: flutter
+  easy_localization: ^3.0.7
+  shared_preferences: ^2.0.15
+  provider: ^6.0.5
+  intl: ^0.20.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -47,6 +53,7 @@ dependencies:
   firebase_auth: ^5.3.1
   google_sign_in: ^6.2.1
   audioplayers: ^6.5.0
+  flutter_gen: ^5.11.0
 
 dev_dependencies:
   flutter_test:
@@ -74,10 +81,22 @@ flutter:
     - assets/beige_texture2.jpg
     - assets/google_logo.png
     - .env
+    - assets/lang/
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  
+  # Enable code generation for localizations
+  generate: true
+
+# Localization generation
+l10n:
+  arb-dir: lib/l10n
+  template-arb-file: app_en.arb
+  output-localization-file: app_localizations.dart
+  output-class: AppLocalizations
 
   # To add assets to your application, add an assets section, like this:
   # assets:
