--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,11 @@ flutter:
   - assets/Mosaic_Art.jpeg
   - assets/Wooden_Toys.jpeg
   - assets/tree.png
+  - assets/tree2.png
+  - assets/tree3.png
+  - assets/tree4.png
+  - assets/plant1.png
+  - assets/plant2.png
   - assets/beige_texture.jpg
   - assets/beige_texture2.jpg
   - assets/google_logo.png
