--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   easy_localization: ^3.0.7
   shared_preferences: ^2.0.15
   provider: ^6.0.5
-  intl: 0.19.0
+  intl: ^0.20.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -89,6 +89,8 @@ flutter:
   - .env
   - assets/lang/
   - assets/logo.png
+  - assets/logo_dark.png
+  - assets/logo_light.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
